# ros2_coche

./: .gitignore  LICENSE  README.md
install/: local_setup.sh  setup.sh
install/c4_gps/lib/c4_gps/: t_gps  talker
install/c4_gps/share/ament_index/resource_index/package_run_dependencies/: c4_gps
install/c4_gps/share/ament_index/resource_index/parent_prefix_path/: c4_gps
install/c4_gps/share/c4_gps/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nmea_msgs/include/nmea_msgs/nmea_msgs/msg/: gpgga.h  gpgga.hpp  gpgsa.h  gpgsa.hpp  gpgst.h  gpgst.hpp  gpgsv.h  gpgsv.hpp  gpgsv_satellite.h  gpgsv_satellite.hpp  gprmc.h  gprmc.hpp  gpvtg.h  gpvtg.hpp  gpzda.h  gpzda.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  sentence.h  sentence.hpp
install/nmea_msgs/include/nmea_msgs/nmea_msgs/msg/detail/: gpgga__builder.hpp  gpgga__functions.h  gpgga__rosidl_typesupport_fastrtps_c.h  gpgga__rosidl_typesupport_fastrtps_cpp.hpp  gpgga__rosidl_typesupport_introspection_c.h  gpgga__rosidl_typesupport_introspection_cpp.hpp  gpgga__struct.h  gpgga__struct.hpp  gpgga__traits.hpp  gpgga__type_support.h  gpgsa__builder.hpp  gpgsa__functions.h  gpgsa__rosidl_typesupport_fastrtps_c.h  gpgsa__rosidl_typesupport_fastrtps_cpp.hpp  gpgsa__rosidl_typesupport_introspection_c.h  gpgsa__rosidl_typesupport_introspection_cpp.hpp  gpgsa__struct.h  gpgsa__struct.hpp  gpgsa__traits.hpp  gpgsa__type_support.h  gpgst__builder.hpp  gpgst__functions.h  gpgst__rosidl_typesupport_fastrtps_c.h  gpgst__rosidl_typesupport_fastrtps_cpp.hpp  gpgst__rosidl_typesupport_introspection_c.h  gpgst__rosidl_typesupport_introspection_cpp.hpp  gpgst__struct.h  gpgst__struct.hpp  gpgst__traits.hpp  gpgst__type_support.h  gpgsv__builder.hpp  gpgsv__functions.h  gpgsv__rosidl_typesupport_fastrtps_c.h  gpgsv__rosidl_typesupport_fastrtps_cpp.hpp  gpgsv__rosidl_typesupport_introspection_c.h  gpgsv__rosidl_typesupport_introspection_cpp.hpp  gpgsv__struct.h  gpgsv__struct.hpp  gpgsv__traits.hpp  gpgsv__type_support.h  (+50 more)
install/nmea_msgs/local/lib/python3.10/dist-packages/nmea_msgs/: __init__.py  _nmea_msgs_s.ep.rosidl_typesupport_c.c  _nmea_msgs_s.ep.rosidl_typesupport_fastrtps_c.c  _nmea_msgs_s.ep.rosidl_typesupport_introspection_c.c
install/nmea_msgs/local/lib/python3.10/dist-packages/nmea_msgs-1.1.0-py3.10.egg-info/: SOURCES.txt
install/nmea_msgs/local/lib/python3.10/dist-packages/nmea_msgs-2.1.0-py3.10.egg-info/: PKG-INFO  dependency_links.txt  top_level.txt
install/nmea_msgs/local/lib/python3.10/dist-packages/nmea_msgs/msg/: __init__.py  _gpgga.py  _gpgga_s.c  _gpgsa.py  _gpgsa_s.c  _gpgst.py  _gpgst_s.c  _gpgsv.py  _gpgsv_s.c  _gpgsv_satellite.py  _gpgsv_satellite_s.c  _gprmc.py  _gprmc_s.c  _gpvtg.py  _gpvtg_s.c  _gpzda.py  _gpzda_s.c  _sentence.py  _sentence_s.c
install/nmea_msgs/share/ament_index/resource_index/package_run_dependencies/: nmea_msgs
install/nmea_msgs/share/ament_index/resource_index/parent_prefix_path/: nmea_msgs
install/nmea_msgs/share/ament_index/resource_index/rosidl_interfaces/: nmea_msgs
install/nmea_msgs/share/nmea_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/nmea_msgs/share/nmea_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_nmea_msgs__rosidl_generator_pyExport.cmake  nmea_msgsConfig-version.cmake  nmea_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/nmea_msgs/share/nmea_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/nmea_msgs/share/nmea_msgs/msg/: Gpgga.idl  Gpgga.msg  Gpgsa.idl  Gpgsa.msg  Gpgst.idl  Gpgst.msg  Gpgsv.idl  Gpgsv.msg  GpgsvSatellite.idl  GpgsvSatellite.msg  Gprmc.idl  Gprmc.msg  Gpvtg.idl  Gpvtg.msg  Gpzda.idl  Gpzda.msg  Sentence.idl  Sentence.msg
log/: latest_build
src/buscan_msgs/: CMakeLists.txt  package.xml
src/buscan_msgs/msg/: CanMsg.msg  can_raw.msg
src/c4_buscan/: CMakeLists.txt  package.xml
src/c4_buscan/include/c4_buscan/: buscan.hpp
src/c4_buscan/src/: buscan.cpp  can_parser.cpp
src/c4_epos/: CMakeLists.txt  package.xml
src/c4_epos/include/c4_epos/: EPOS.hpp
src/c4_epos/src/: EPOS.cpp  epos_reader.cpp  mode_control.cpp
src/c4_gps/: CMakeLists.txt  package.xml
src/c4_gps/src/: gps_reader.cpp  trimble_gps.cpp
src/c4_imu/: CMakeLists.txt  package.xml
src/c4_imu/src/: imu.cpp
src/c4_radar/: CMakeLists.txt  package.xml
src/c4_radar/include/c4_radar/: UserDefinitions.h  radar_ars408.h  radar_ars408.hpp  radar_srr208.hpp
src/c4_radar/launch/: radar_parser_208_1_launch.py  radar_parser_208_2_launch.py  radar_parser_408_launch.py  radar_parser_launch.py  radar_reader_208_launch.py  radar_reader_408_launch.py  radar_reader_launch.py  radar_visualization_launch.py
src/c4_radar/rviz/: radar_markers_config.rviz
src/c4_radar/src/: radar_ars408.cpp  radar_parser.cpp  radar_reader.cpp  radar_srr208.cpp  radar_visualization.cpp
src/epos_msgs/: CMakeLists.txt  package.xml
src/epos_msgs/msg/: Brake.msg  ControlMode.msg  SteeringWheel.msg  Throttle.msg
src/install/: local_setup.sh  setup.sh
src/install/nmea_msgs/share/nmea_msgs/: package.bash  package.zsh
src/log/: latest_build
src/nmea_msgs/: CMakeLists.txt  package.xml
src/radar_msgs/: CMakeLists.txt  package.xml
src/radar_msgs/msg/: ARS408Object.msg  RadarMsg208.msg  RadarMsg408.msg  RadarRaw.msg  SRR208Object.msg
