<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nmea_msgs</name>
  <version>1.1.0</version>
  <description>The nmea_msgs package contains messages related to data in the NMEA format.</description>
  <maintainer email="evenator@gmail.com">Ed Venator</maintainer>
  <license>BSD-3-Clause</license>
  <url type="website">http://ros.org/wiki/nmea_msgs</url>
  <author email="eric@ericperko.com">Eric Perko</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
